# whispercpp.py

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py  whispercpp.pxd  whispercpp.pyx
